fix collapsed header
fixes #15

--- a/app/frontend/global/css/header.less
+++ b/app/frontend/global/css/header.less
@@ -35,6 +35,28 @@
 }
 
 
+.navbar-inverse .navbar-toggle {
+  border-color: @primary-color;
+
+  & .icon-bar{
+    background-color: @primary-color;
+  }
+
+
+  &:hover{
+    background-color: @primary-color;
+
+    & .icon-bar{
+      background-color: white;
+    }
+  }
+
+}
+
+.navbar-inverse .navbar-collapse, .navbar-inverse .navbar-form{
+  border: none;
+}
+
 
 
 .navbar-brand,
